objects/EPA_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Number_s_Prefix__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter 2 letter prefix.</inlineHelpText>
        <label>Call Number/s Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Contract End Date</inlineHelpText>
        <label>Contract End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>GAS Order Management</description>
        <displayFormat>EPA-{000000}</displayFormat>
        <inlineHelpText>Contract Number is auto generated.</inlineHelpText>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Special_Terms__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter any specific contract special terms</inlineHelpText>
        <label>Contract Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Contract Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>Gas Order Management</description>
        <inlineHelpText>Contract status</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demurrage_Day__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter Day of Each month (DD-MM-YY) - Demurrage Calculation</inlineHelpText>
        <label>Demurrage Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demurrage_Rate_Gas_Cylinder__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter the rate for gas cylinders only</inlineHelpText>
        <label>Demurrage Rate/Gas Cylinder</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demurrage_Rate_Liquid_Cylinder__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter Rate for liquid cylinders only</inlineHelpText>
        <label>Demurrage Rate/Liquid Cylinder</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Contract Description</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Maximum Amount of money for a call number</inlineHelpText>
        <label>Max Amount/Call Number</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Amount_DCN_Warning__c</fullName>
        <description>GAS Order Managemnt</description>
        <inlineHelpText>Minimum amount of money left in before DCN warning</inlineHelpText>
        <label>Min Amount/DCN Warning</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requisitioning_Office__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Enter requisitioning office info</inlineHelpText>
        <label>Requisitioning Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Total amount of contract money allowed.</inlineHelpText>
        <label>Total Contract Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>GAS Order Management</description>
        <inlineHelpText>Related Vendor</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Contract information.  First implemented to capture GAS Vendor related contract information, but available for other purposes, too.  Not to be confused with the standard object Contract.</description>
    <label>Contract</label>
    <nameField>
        <displayFormat>EPA-C-{000000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>GAS_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Contract_Number__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>GAS Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>GAS_Vendor_Contract</fullName>
        <active>true</active>
        <description>GAS Order Management</description>
        <label>GAS Vendor Contract</label>
    </recordTypes>
</CustomObject>